fix about bio spacing

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -34,6 +34,13 @@
         height: 200px;
         margin: 10px;
     }
+
+    .aboutBioText{
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        text-align: left;
+    }
 }
 
 .textBasic{
